<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btenaga"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btenaga"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bek"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bep"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bep"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bem"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bdaya"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bdaya"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>